login modifies and sign up added

--- a/sign-up.html
+++ b/sign-up.html
@@ -20,12 +20,16 @@
 	<h1 style="background-color:rgb(17, 0, 255)" align="center"><b>PESU Bank</b></h1>
 	<div class="bg">
 		<div align="center" class="cred">
+            <h3>Enter your details to create an account:</h3>
 			<form action="/action_page.php">
-				Username: <input type="text" name="Username"><br><br>
+				Name: <input type="text" name="Name"><br><br>
+                Email ID: <input type="text" name="Email"><br><br>
+                Phone Number: <input type="number" name="Number"><br><br>
+                Address:<input type="text" name="Address" size="100"><br><br>
+                Username: <input type="text" name="Username"><br><br>
 				Password: <input type="password" name="Password"><br><br>
-				<input type="submit" value="Login">
-			</form>
-			<a href = "sign-up.html">Sign-up?</a>
+				<input type="submit" value="Sign-up">
+            </form>
 		</div>	
 	</div>	
 </body>
