sign-up file changed

--- a/sign-up.html
+++ b/sign-up.html
@@ -24,7 +24,12 @@
 			<form action="/action_page.php">
 				Name: <input type="text" name="Name"><br><br>
                 Email ID: <input type="text" name="Email"><br><br>
-                Phone Number: <input type="number" name="Number"><br><br>
+				Phone Number: <input type="number" name="Number"><br><br>
+				Age: <input type="number" name="Age"><br><br>
+				Gender:<select name="Gender">
+					<option value="male">male</option>
+					<option value="female">female</option>
+				  </select><br><br>
                 Address:<input type="text" name="Address" size="100"><br><br>
                 Username: <input type="text" name="Username"><br><br>
 				Password: <input type="password" name="Password"><br><br>
