sign-up modified

--- a/sign-up.html
+++ b/sign-up.html
@@ -2,7 +2,7 @@
 <head> <title> PESU-Bank </title></head>
 <style>
 	.bg{
-		background: linear-gradient(to right, rgb(4, 0, 255), #08080a);
+		background: linear-gradient(to right, rgb(86, 86, 92), #08080a);
 		height:100%;
 		align-content: center;
 		padding:200px;
@@ -17,7 +17,7 @@
 		}	
 </style>		
 <body>
-	<h1 style="background-color:rgb(17, 0, 255)" align="center"><b>PESU Bank</b></h1>
+	<h1 style="background-color:rgb(86, 86, 92)" color= "white" align="center"><b>PESU Bank</b></h1>
 	<div class="bg">
 		<div align="center" class="cred">
             <h3>Enter your details to create an account:</h3>
