--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
 <head> <title> SIGN UP </title></head>
 <style>
 	.bg{
-		background: linear-gradient(to right, rgb(86, 86, 92), #08080a);
+		background:#17a2b8;
 		height:100%;
 		align-content: center;
 		padding:200px;
@@ -11,16 +11,18 @@
 		margin: auto;
   		width: 70%;
 		padding: 10px;
-		background:white;
+		background: #17a2b8;
+		color: aliceblue;
 		font-size:large;
+		font-family:"Lato", sans-serif;
 		}	
 </style>		
 <body class="bg">
     
 	<div >
 		<div align="center" class="cred">
-            <h1 style="color:black;font-size:50" color= "white" align="center"><b>PESU BANK</b></h1>
-            <h3 style="color:black;font-size:35" align="center">ENTER YOUR PERSONAL DETAILS</h3>
+            <h1 style="color:aliceblue;font-size:50" color= "aliceblue" align="center"><b>PESU BANK</b></h1>
+            <h3 style="color:aliceblue;font-size:35" align="center">ENTER YOUR PERSONAL DETAILS</h3>
 
 			<form action="register.php" method = "POST">
                 Username: <input type="text" name="Username"><br><br>
