--- a/login.html
+++ b/login.html
@@ -1,14 +1,15 @@
 
 <html>
-<head> <title> Legal Documents Handler </title></head>
+<head> <title> PESU-Bank </title></head>
 <style>
 	.bg{
-		background-color:rgb(37, 39, 39);
+		background-color:#17a2b8;
 		height:100%;
 		align-content: center;
 		padding:200px;
 		color:aliceblue;
 		font-size:30;
+		font-family:"Lato", sans-serif;
 		}
 	.cred {
 		margin: auto;
