--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head> <title> PESU-Bank </title></head>
 <style>
 	.bg{
-		background-color:#17a2b8;
+		background-color:#50394c;
 		height:100%;
 		align-content: center;
 		padding:200px;
@@ -28,12 +28,17 @@
 	<h1 id = "head">PESU BANK</h1>
 	<div >
 		<div align="center" class="cred">
+			--------------------------------------------------------------------<br>
+			Login to access your bank account<br><br>
 			<form align = "center" action="login.php" method ="POST">
 				USERNAME<br> <input type="text" name="Username"><br><br>
 				PASSWORD<br> <input type="password" name="Password"><br><br>
 				<input type="submit" name = "login-submit" value="Login">
 			</form>
-			<button id = "register">REGISTER FOR FREE!</button>
+			--------------------------------------------------------------------<br>
+			Or join us!!<br><br>
+			<button id = "register">REGISTER FOR FREE!</button><br>
+			--------------------------------------------------------------------<br>
 		</div>	
 	</div>	
 </body>
