--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
 <head> <title> SIGN UP </title></head>
 <style>
 	.bg{
-		background:#17a2b8;
+		background:#50394c;
 		height:100%;
 		align-content: center;
 		padding:200px;
@@ -11,8 +11,8 @@
 		margin: auto;
   		width: 70%;
 		padding: 10px;
-		background: #17a2b9;
-		color: aliceblue;
+		background: #ffef96;
+		color: #50394c;
 		font-size:large;
 		font-family:"Lato", sans-serif;
 		}	
@@ -21,8 +21,8 @@
     
 	<div >
 		<div align="center" class="cred">
-            <h1 style="color:aliceblue;font-size:50" color= "aliceblue" align="center"><b>PESU BANK</b></h1>
-            <h3 style="color:aliceblue;font-size:35" align="center">ENTER YOUR PERSONAL DETAILS</h3>
+            <h1 style="color:#50394c;font-size:50" color= "aliceblue" align="center"><b>PESU BANK</b></h1>
+            <h3 style="color:#50394c;font-size:35" align="center">ENTER YOUR PERSONAL DETAILS</h3>
 
 			<form action="register.php" method = "POST">
                 Username: <input type="text" name="Username"><br><br>
