--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 		height:100%;
 		align-content: center;
 		padding:200px;
-		color:aliceblue;
+		color:#ffef96;
 		font-size:30;
 		font-family:"Lato", sans-serif;
 		}
@@ -27,7 +27,7 @@
 	<h1 id = "head">WELCOME TO</h1>
 	<h1 id = "head">PESU BANK</h1>
 	<div >
-		<div align="center" class="cred">
+		<div align="center" style="color:#ffef96" class="cred">
 			--------------------------------------------------------------------<br>
 			Login to access your bank account<br><br>
 			<form align = "center" action="login.php" method ="POST">
